--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
         <span></span>
       </a>
       <p class="u-text">
-        <span></span>
+        <span>Сайт разработала студентка группы 3-1 КСК Бабина Кристина 25.11.2021</span>
       </p>
       <a class="u-link" href="" target="_blank">
         <span></span>
