--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ c5.5,0,9.9,4.5,9.9,9.9V73.3z"></path></svg></span>
               <div class="u-align-left u-container-style u-layout-cell u-size-20 u-size-20-md u-layout-cell-2">
                 <div class="u-container-layout u-valign-top u-container-layout-2">
                   <h6 class="u-text u-text-3">Адресс</h6>
-                  <p class="u-small-text u-text u-text-variant u-text-4"> Оренбургская область, город Подольск, шоссе Гагарина, 87</p>
+                  <p class="u-small-text u-text u-text-variant u-text-4">Город Саранск,Гагарина, 87</p>
                 </div>
               </div>
               <div class="u-align-left u-container-style u-layout-cell u-right-cell u-size-20 u-size-20-md u-layout-cell-3">
