--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <meta property="og:type" content="website">
   </head>
   <body data-home-page="https://website1019191.nicepage.io/Главная.html?version=b4de0fad-04d0-4625-87fb-3a14f1f5c379" data-home-page-title="Главная" class="u-body"><header class="u-clearfix u-header u-header" id="sec-f23a"><div class="u-clearfix u-sheet u-sheet-1">
+	 <div id="clock"></div>
         <div class="u-social-icons u-spacing-10 u-social-icons-1">
           <a class="u-social-url" title="facebook" target="_blank" href="https://facebook.com/name"><span class="u-icon u-social-facebook u-social-icon u-text-black"><svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 112 112" style=""><use xlink:href="#svg-64bf"></use></svg><svg class="u-svg-content" viewBox="0 0 112 112" x="0" y="0" id="svg-64bf"><circle fill="currentColor" cx="56.1" cy="56.1" r="55"></circle><path fill="#FFFFFF" d="M73.5,31.6h-9.1c-1.4,0-3.6,0.8-3.6,3.9v8.5h12.6L72,58.3H60.8v40.8H43.9V58.3h-8V43.9h8v-9.2
 c0-6.7,3.1-17,17-17h12.5v13.9H73.5z"></path></svg></span>
